Fixed sidebar overflow

--- a/src/partials/modules/_sidebar.sass
+++ b/src/partials/modules/_sidebar.sass
@@ -14,7 +14,7 @@
     transition : transform $sidebar_easingDuration $sidebar_timeingFunction
     will-change: transform
     visibility : hidden
-    overflow   : scroll
+    overflow   : auto
     z-index    : $z_sidebar
 
     backface-visibility       : hidden
